--- a/public/plugins/croppie/croppie.css
+++ b/public/plugins/croppie/croppie.css
@@ -1,4 +1,4 @@
-/* .modal-dialog {
+.modal {
     position: absolute;
     overflow: auto;
     overflow-y: auto;
@@ -7,7 +7,7 @@
 .modal-open .modal{
     overflow-x: hidden;
     overflow-y: hidden;
-} */
+}
 .croppie-container {
     width: 100%;
     height: 100%;
